Ubah nama perusahaan menjadi HRD APP pada template cetak

--- a/hrd_app/templates/hrd_app/rekap.html
+++ b/hrd_app/templates/hrd_app/rekap.html
@@ -382,7 +382,7 @@
     <!-- Kop Dokumen -->
     <div class="kop">
         <div class="kop-kiri">
-            <h1>PT. EMIP SUKSES MANDIRI</h1>
+            <h1>HRD APP</h1>
             <p>Sistem Manajemen SDM &bull; Bandung, Jawa Barat</p>
         </div>
         <div class="kop-kanan">
