--- a/hrd_app/templates/hrd_app/riwayat_saya.html
+++ b/hrd_app/templates/hrd_app/riwayat_saya.html
@@ -249,7 +249,7 @@
 <div id="print-area">
 
     <div class="print-header">
-        <h1>PT. EMIP SUKSES MANDIRI</h1>
+        <h1>HRD APP</h1>
         <p>Jl. Raya Utama Kantor &bull; Sistem Informasi Manajemen SDM</p>
     </div>
 
@@ -323,7 +323,7 @@
 
     <div
         style="margin-top: 30pt; font-size: 7.5pt; color: #555; text-align: center; border-top: 0.5pt solid #eee; padding-top: 5pt;">
-        Dokumen ini diterbitkan oleh Sistem HRD PT. EMIP SUKSES MANDIRI secara otomatis.
+        Dokumen ini diterbitkan oleh Sistem HRD APP secara otomatis.
     </div>
 
 </div>
